// Copyright 2018 EAP

#ifndef COMMUNICATION_PROTOCOL_MESSAGE_TYPE_H_
#define COMMUNICATION_PROTOCOL_MESSAGE_TYPE_H_

namespace communication {
namespace protocol {

enum class MessageType {
    kFirmwareVersion = 0x00
};

}  // namespace protocol
}  // namespace communication

#endif  // COMMUNICATION_PROTOCOL_MESSAGE_TYPE_H_
